# spiderchef

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  mkdocs.yml  output.yaml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: contributing.md  getting-started.md  index.md
docs/advanced/: async-support.md  custom-steps.md
docs/api/: recipe.md  steps.md
docs/user-guide/: basic-usage.md  recipe-format.md  step-types.md  variables.md
spiderchef/: __init__.py  cli.py  exceptions.py  recipe.py  settings.py  utils.py
spiderchef/steps/: __init__.py  asynchronous.py  base.py  conditional.py  error.py  extract.py  fetch.py  format.py
tests/: conftest.py  smoke_test.py  test_cli.py  test_recipe.py
tests/steps/: test_asynchronous.py  test_base.py  test_conditional.py  test_error.py  test_extract.py  test_format.py
