[project]
name = "spiderchef"
version = "0.1.0"
description = "A recipe based web scraping tool."
readme = "README.md"
authors = [
    { name = "Jesse Constante", email = "jglconstante@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0.2",
    "pydantic>=2.11.4",
    "aiohttp>=3.11.18",
    "pydash>=8.0.5",
    "structlog>=25.3.0",
    "orjson>=3.10.18",
    "curl-cffi>=0.10.0",
    "lxml>=5.4.0",
]

[dependency-groups]
cli = ["typer>=0.15.3", "rich"]


[project.scripts]
spiderchef = "spiderchef.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
